--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "firebase": "^10.11.0",
+    "firebase": "^10.14.1",
+    "firebase-tools": "^13.29.1",
     "react": "^18.2.0",
     "react-background-slider": "^3.0.0-0",
     "react-dom": "^18.2.0",
